--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,7 @@ on:
 
 env:
   IMAGE_NAME: webots
+  DEFAULT_WEBOTS_VERSION: R2020b-rev1
 
 jobs:
   dockerhub-publication:
@@ -16,13 +17,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag webots:R2020b
+      run: docker build . --file Dockerfile --tag $IMAGE_NAME:R2020b --build-arg webots-version=$DEFAULT_WEBOTS_VERSION
     - name: Build and push Docker images on Dockerhub
       uses: docker/build-push-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: cyberbotics/webots
+        repository: cyberbotics/$IMAGE_NAME
         tags: R2020b
   github-publication:
     runs-on: ubuntu-latest
@@ -30,7 +31,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME
+        run: docker build . --file Dockerfile --tag $IMAGE_NAME --build-arg webots-version=$DEFAULT_WEBOTS_VERSION
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
       - name: Push image
