--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $IMAGE_NAME:R2020b --build-arg webots-version=$DEFAULT_WEBOTS_VERSION
+      run: docker build . --file Dockerfile --tag $IMAGE_NAME:R2020b --build-arg WEBOTS_VERSION=$DEFAULT_WEBOTS_VERSION
     - name: Build and push Docker images on Dockerhub
       uses: docker/build-push-action@v1
       with:
@@ -31,7 +31,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME --build-arg webots-version=$DEFAULT_WEBOTS_VERSION
+        run: docker build . --file Dockerfile --tag $IMAGE_NAME --build-arg WEBOTS_VERSION=$DEFAULT_WEBOTS_VERSION
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
       - name: Push image
