--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: cyberbotics/$IMAGE_NAME
+        repository: cyberbotics/webots
         tags: R2020b
   github-publication:
     runs-on: ubuntu-latest
