--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,16 +19,18 @@ jobs:
     - name: Determine Version
       run: |
         # Strip git ref prefix from version
-        VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+        IMAGE_TAG=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
         # Use Docker `latest` tag convention
-        [ "$VERSION" == "master" ] && VERSION=latest
+        [ "$IMAGE_TAG" == "master" ] && IMAGE_TAG=latest
+        # Webots version
+        [ "$IMAGE_TAG" != "latest" ] && WEBOTS_VERSION=$IMAGE_TAG
+        [ "$IMAGE_TAG" == "latest" ] && WEBOTS_VERSION=$DEFAULT_WEBOTS_VERSION
         echo IMAGE_ID=$IMAGE_ID
-        echo VERSION=$VERSION
-        echo ::set-env name=VERSION::$VERSION
-    - name: test
-      run: echo test=$VERSION
+        echo WEBOTS_VERSION=$WEBOTS_VERSION
+        echo ::set-env name=IMAGE_TAG::$IMAGE_TAG
+        echo ::set-env name=WEBOTS_VERSION::$WEBOTS_VERSION
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $IMAGE_NAME:R2020b --build-arg WEBOTS_VERSION=$DEFAULT_WEBOTS_VERSION
+      run: docker build . --file Dockerfile --tag $IMAGE_NAME:$IMAGE_TAG --build-arg WEBOTS_VERSION=$WEBOTS_VERSION
     - name: Build and push Docker images on Dockerhub
       uses: docker/build-push-action@v1
       with:
