--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,9 @@ env:
 jobs:
   dockerhub-publication:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        UBUNTU_VERSION: [18.04, 16.04]
     steps:
     - uses: actions/checkout@v2
     - name: Determine Version
@@ -28,10 +31,10 @@ jobs:
         # Display and save
         echo IMAGE_TAG=$IMAGE_TAG
         echo WEBOTS_VERSION=$WEBOTS_VERSION
-        echo ::set-env name=IMAGE_TAG::$IMAGE_TAG
+        echo ::set-env name=IMAGE_TAG::$IMAGE_TAG-ubuntu${{ matrix.UBUNTU_VERSION }}
         echo ::set-env name=WEBOTS_VERSION::$WEBOTS_VERSION
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $IMAGE_NAME:$IMAGE_TAG --build-arg WEBOTS_VERSION=$WEBOTS_VERSION
+      run: docker build . --file Dockerfile --tag $IMAGE_NAME:$IMAGE_TAG --build-arg WEBOTS_VERSION=$WEBOTS_VERSION UBUNTU_VERSION=${{ matrix.UBUNTU_VERSION }}
     - name: Log into registry
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username=${{ secrets.DOCKER_USERNAME }} --password-stdin
     - name: Push image
@@ -40,6 +43,9 @@ jobs:
         docker push ${{ secrets.DOCKER_USERNAME }}/$IMAGE_NAME:$IMAGE_TAG
   github-publication:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        UBUNTU_VERSION: [18.04, 16.04]
     if: github.event_name == 'push'
     steps:
       - uses: actions/checkout@v2
@@ -60,10 +66,10 @@ jobs:
           echo IMAGE_TAG=$IMAGE_TAG
           echo WEBOTS_VERSION=$WEBOTS_VERSION
           echo ::set-env name=IMAGE_ID::$IMAGE_ID
-          echo ::set-env name=IMAGE_TAG::$IMAGE_TAG
+          echo ::set-env name=IMAGE_TAG::$IMAGE_TAG-ubuntu${{ matrix.UBUNTU_VERSION }}
           echo ::set-env name=WEBOTS_VERSION::$WEBOTS_VERSION
       - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME:$IMAGE_TAG --build-arg WEBOTS_VERSION=$WEBOTS_VERSION
+        run: docker build . --file Dockerfile --tag $IMAGE_NAME:$IMAGE_TAG --build-arg WEBOTS_VERSION=$WEBOTS_VERSION UBUNTU_VERSION=${{ matrix.UBUNTU_VERSION }}
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
       - name: Push image
