--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,9 @@ jobs:
   # See also https://docs.docker.com/docker-hub/builds/automated-testing/
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        UBUNTU_VERSION: [18.04, 16.04]
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
@@ -16,5 +19,5 @@ jobs:
             docker-compose --file docker-compose.test.yml build
             docker-compose --file docker-compose.test.yml run sut
           else
-            docker build . --file Dockerfile
+            docker build . --file Dockerfile --build-arg UBUNTU_VERSION=${{ matrix.UBUNTU_VERSION }}
           fi
