--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,7 @@ jobs:
         echo ::set-env name=IMAGE_TAG::$IMAGE_TAG-ubuntu${{ matrix.UBUNTU_VERSION }}
         echo ::set-env name=WEBOTS_VERSION::$WEBOTS_VERSION
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $IMAGE_NAME:$IMAGE_TAG --build-arg WEBOTS_VERSION=$WEBOTS_VERSION UBUNTU_VERSION=${{ matrix.UBUNTU_VERSION }}
+      run: docker build . --file Dockerfile --tag $IMAGE_NAME:$IMAGE_TAG --build-arg WEBOTS_VERSION=$WEBOTS_VERSION --build-arg UBUNTU_VERSION=${{ matrix.UBUNTU_VERSION }}
     - name: Log into registry
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username=${{ secrets.DOCKER_USERNAME }} --password-stdin
     - name: Push image
@@ -69,7 +69,7 @@ jobs:
           echo ::set-env name=IMAGE_TAG::$IMAGE_TAG-ubuntu${{ matrix.UBUNTU_VERSION }}
           echo ::set-env name=WEBOTS_VERSION::$WEBOTS_VERSION
       - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME:$IMAGE_TAG --build-arg WEBOTS_VERSION=$WEBOTS_VERSION UBUNTU_VERSION=${{ matrix.UBUNTU_VERSION }}
+        run: docker build . --file Dockerfile --tag $IMAGE_NAME:$IMAGE_TAG --build-arg WEBOTS_VERSION=$WEBOTS_VERSION --build-arg UBUNTU_VERSION=${{ matrix.UBUNTU_VERSION }}
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
       - name: Push image
