--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        BASE_IMAGE: [nvidia/cudagl:10.0-devel-ubuntu18.04, nvidia/cudagl:11.0-devel-ubuntu20.04]
+        BASE_IMAGE: ["nvidia/cudagl:10.0-devel-ubuntu18.04", "nvidia/cudagl:11.0-devel-ubuntu20.04"]
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
