--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,9 @@ jobs:
     strategy:
       matrix:
         BASE_IMAGE: ["nvidia/cudagl:10.0-devel-ubuntu18.04", "nvidia/cudagl:11.0-devel-ubuntu20.04"]
+        include:
+          - BASE_IMAGE: "nvidia/cudagl:10.0-devel-ubuntu18.04"
+            WEBOTS_PACKAGE_PREFIX: "_ubuntu16.04"
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
@@ -19,5 +22,5 @@ jobs:
             docker-compose --file docker-compose.test.yml build
             docker-compose --file docker-compose.test.yml run sut
           else
-            docker build . --file Dockerfile --build-arg BASE_IMAGE=${{ matrix.BASE_IMAGE }}
+            docker build . --file Dockerfile --build-arg BASE_IMAGE=${{ matrix.BASE_IMAGE }} --build-arg WEBOTS_PACKAGE_PREFIX=${{ matrix.WEBOTS_PACKAGE_PREFIX }}
           fi
