--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,8 +34,8 @@ jobs:
         # Display and save
         echo IMAGE_TAG=$IMAGE_TAG
         echo WEBOTS_VERSION=$WEBOTS_VERSION
-        # echo ::set-env name=IMAGE_TAG::$IMAGE_TAG
-        # echo ::set-env name=WEBOTS_VERSION::$WEBOTS_VERSION
+        echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
+        echo "WEBOTS_VERSION=${WEBOTS_VERSION}" >> $GITHUB_ENV
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag $IMAGE_NAME:$IMAGE_TAG --build-arg WEBOTS_VERSION=$WEBOTS_VERSION --build-arg BASE_IMAGE=${{ matrix.BASE_IMAGE }} --build-arg WEBOTS_PACKAGE_PREFIX=${{ matrix.WEBOTS_PACKAGE_PREFIX }}
     - name: Log into registry
@@ -71,9 +71,9 @@ jobs:
           echo IMAGE_ID=$IMAGE_ID
           echo IMAGE_TAG=$IMAGE_TAG
           echo WEBOTS_VERSION=$WEBOTS_VERSION
-          # echo ::set-env name=IMAGE_ID::$IMAGE_ID
-          # echo ::set-env name=IMAGE_TAG::$IMAGE_TAG-ubuntu${{ matrix.UBUNTU_VERSION }}
-          # echo ::set-env name=WEBOTS_VERSION::$WEBOTS_VERSION
+          echo "IMAGE_ID=${IMAGE_ID}" >> $GITHUB_ENV
+          echo "IMAGE_TAG=$IMAGE_TAG-ubuntu${{ matrix.UBUNTU_VERSION }}" >> $GITHUB_ENV
+          echo "WEBOTS_VERSION=$WEBOTS_VERSION" >> $GITHUB_ENV
       - name: Build image
         run: docker build . --file Dockerfile --tag $IMAGE_NAME:$IMAGE_TAG --build-arg WEBOTS_VERSION=$WEBOTS_VERSION --build-arg BASE_IMAGE=${{ matrix.BASE_IMAGE }} --build-arg WEBOTS_PACKAGE_PREFIX=${{ matrix.WEBOTS_PACKAGE_PREFIX }}
       - name: Log into registry
