--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,9 +32,9 @@ jobs:
     steps:
       - name: Run test suite
         run: |
-          ls -l
           git clone --depth 1 --recurse-submodules -j8 https://github.com/cyberbotics/webots.git -b master
+          ls -l
           docker run --name webots -i -v $PWD/webots/tests:/usr/local/webots/tests cyberbotics/webots:latest bash
           docker start webots
-          docker exec -i webots bash -c "xvfb-run python3 tests/test_suite.py"
+          docker exec -i webots bash -c "ls -l && cd webots && ls -l && xvfb-run python3 tests/test_suite.py"
 
