--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,8 +33,7 @@ jobs:
       - name: Run test suite
         run: |
           git clone --depth 1 --recurse-submodules -j8 https://github.com/cyberbotics/webots.git -b master
-          ls -l
           docker run --name webots -i -v $PWD/webots/tests:/usr/local/webots/tests cyberbotics/webots:latest bash
           docker start webots
-          docker exec -i webots bash -c "ls -l && cd webots && ls -l && xvfb-run python3 tests/test_suite.py"
+          docker exec -i webots bash -c "apt update && apt install liburdfdom-tools -y && cd webots && xvfb-run python3 tests/test_suite.py"
 
