--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        BASE_IMAGE: ["nvidia/cudagl:11.4.2-devel-ubuntu18.04", "nvidia/cudagl:11.4.2-devel-ubuntu20.04"]
+        BASE_IMAGE: ["nvidia/cudagl:11.4.2-devel-ubuntu20.04"]
         include:
-          - BASE_IMAGE: "nvidia/cudagl:11.4.2-devel-ubuntu18.04"
-            WEBOTS_PACKAGE_PREFIX: "_ubuntu-18.04"
+          - BASE_IMAGE: "nvidia/cudagl:11.4.2-devel-ubuntu20.04"
+            WEBOTS_PACKAGE_PREFIX: "_ubuntu-20.04"
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
