--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        BASE_IMAGE: [nvidia/cudagl:11.4.2-devel-ubuntu20.04"]
+        BASE_IMAGE: ["nvidia/cudagl:11.4.2-devel-ubuntu20.04"]
     if: github.event_name == 'push'
     steps:
       - uses: actions/checkout@v2
