--- a/Dockerfile_webots_cloud
+++ b/Dockerfile_webots_cloud
@@ -1,4 +1,4 @@
-ARG BASE_IMAGE=webots:latest
+ARG BASE_IMAGE=cyberbotics/webots:latest
 FROM $BASE_IMAGE AS downloader
 
 # Determine Webots version to be used and set default argument
