--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        BASE_IMAGE: ["nvidia/cudagl:11.4.2-devel-ubuntu20.04"]  
+        BASE_IMAGE: ["nvidia/opengl:1.2-glvnd-runtime-ubuntu20.04"]  
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
