--- a/Webots-R2023b.conf
+++ b/Webots-R2023b.conf
@@ -36,7 +36,7 @@ httpProxyPassword=
 httpProxyPort=0
 httpProxyType=2
 httpProxyUsername=
-uploadUrl=https://beta.webots.cloud
+uploadUrl=https://webots.cloud
 
 [OpenGL]
 GTAO=0
@@ -52,9 +52,6 @@ newBrowserWindow=false
 [Sound]
 mute=true
 volume=80
-
-[Streaming]
-port=1234
 
 [View3d]
 hideAllCameraOverlays=false
