--- a/Dockerfile_ikpy
+++ b/Dockerfile_ikpy
@@ -1,2 +1,2 @@
-FROM cyberbotics/webots.cloud:R2023b-ubuntu22.04
+FROM cyberbotics/webots.cloud:R2025a-ubuntu24.04
 RUN apt-get update && apt-get install -y python3-pip && rm -rf /var/lib/apt/lists/ && pip install --no-cache-dir ikpy
